--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -17,7 +17,38 @@ header-img: "img/fm/05.jpg"
 </head>
 
 <body>
-<a href="http://123.207.42.38/tvb.php?type=jade"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/jade.jpg" alt="" width="195" height="110" /></a><a href="http://zikbo.lofter.com/0inews0"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/inews.jpg" alt="" width="195" height="110" /></a>
+<table width="400" border="0">
+  <tr>
+    <td><a href="http://123.207.42.38/tvb.php?type=jade"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/jade.jpg" alt="" width="400" height="226" /></a></td>
+  </tr>
+  <tr>
+    <td><a href="http://zikbo.lofter.com/0inews0"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/inews.jpg" alt="" width="400" height="226" /></a></td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+  </tr>
+</table>
 </body>
 </html>
 
