--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -19,10 +19,10 @@ header-img: "img/fm/05.jpg"
 <body>
 <table width="400" border="0">
   <tr>
-    <td><a href="http://123.207.42.38/tvb.php?type=jade"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/jade.jpg" alt="" width="400" height="226" /></a></td>
+    <td><img src="file:///C|/Users/xoxhe/Desktop/jade.jpg" alt="" width="200" height="113" /><img src="file:///C|/Users/xoxhe/Desktop/inews.jpg" alt="" width="200" height="113" /></td>
   </tr>
   <tr>
-    <td><a href="http://zikbo.lofter.com/0inews0"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/inews.jpg" alt="" width="400" height="226" /></a></td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
     <td>&nbsp;</td>
@@ -51,6 +51,10 @@ header-img: "img/fm/05.jpg"
 </table>
 </body>
 </html>
+
+
+
+
 
 <!-- English Version -->
 <!-- <div class="en post-container">
