--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -19,7 +19,7 @@ header-img: "img/fm/05.jpg"
 <body>
 <table width="400" border="0">
   <tr>
-    <td><img src="file:///C|/Users/xoxhe/Desktop/jade.jpg" alt="" width="200" height="113" /><img src="file:///C|/Users/xoxhe/Desktop/inews.jpg" alt="" width="200" height="113" /></td>
+    <td><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/jade.jpg" alt="" width="200" height="113" /><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/inews.jpg" alt="" width="200" height="113" /></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
