--- a/bookmarks.html
+++ b/bookmarks.html
@@ -68,8 +68,12 @@ header-img: "img/fm/03.jpg"
     <td colspan="2"><div align="center">Network</div></td>
   </tr>
   <tr>
-    <td><div align="center"><a href="http://192.168.0.1/">Router</a></div></td>
-    <td><div align="center"><a href="https://plus.google.com/communities/103542666306656189846">SSR-G+</a></div></td>
+    <td><div align="center"><a href="http://router.asus.com">Router</a></div></td>
+    <td><div align="center"><a href="https://r94pan.ddnsto.com">Router2</a></div></td>
+  </tr>
+  <tr>
+    <td><div align="center"><a href="http://router.asus.com"></a><a href="https://a94pan.ddnsto.com">AirCloud</a></div></td>
+    <td><div align="center"><a href="https://r94pan.ddnsto.com/Main_IPV6Status_Content.asp">IPV6</a></div></td>
   </tr>
   <tr>
     <td><div align="center"><a href="https://github.com/gfw-breaker/ssr-accounts/blob/master/README.md">SSR-Github</a></div></td>
@@ -80,7 +84,7 @@ header-img: "img/fm/03.jpg"
   </tr>
   <tr>
     <td><div align="center"><a href="https://www.xvideos.com/">XVIDEOS</a></div></td>
-    <td><div align="center"><a href="https://www.524zh.com/">SiHu</a></div></td>
+    <td><div align="center"><a href="https://www.931zh.com/">SiHu</a></div></td>
   </tr>
   <tr>
     <td><div align="center"><a href="https://www.pornhub.com/">Pornhub</a></div></td>
@@ -96,6 +100,5 @@ header-img: "img/fm/03.jpg"
 </table>
 </body>
 </html>
-
 
 
