--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -16,39 +16,12 @@ header-img: "img/fm/05.jpg"
 <p>
 </head>
 
-<body>
-<table width="400" border="0">
-  <tr>
-    <td><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/jade.jpg" alt="" width="200" height="113" /><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/inews.jpg" alt="" width="200" height="113" /></td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-  </tr>
-</table>
+<SCRIPT LANGUAGE="JavaScript">
+function adClick(ad, site) {
+window.open(ad);
+window.location = site;}
+</script> <a href="javascript:adClick('http://www.baitv.com/ext/gztv/gztv1/', 'http://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4.m3u8');">廣州綜合HD</a>
+
 </body>
 </html>
 
