--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -16,12 +16,22 @@ header-img: "img/fm/05.jpg"
 <p>
 </head>
 
-<SCRIPT LANGUAGE="JavaScript">
+<body>
+<table width="400" border="0">
+  <tr>
+    <td> <SCRIPT LANGUAGE="JavaScript">
 function adClick(ad, site) {
 window.open(ad);
 window.location = site;}
-</script> <a href="javascript:adClick('http://www.baitv.com/ext/gztv/gztv1/', 'http://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4.m3u8');">廣州綜合HD</a>
-
+</script> <a href="javascript:adClick('http://www.baitv.com/ext/gztv/gztv1/', 'http://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4.m3u8');">廣州綜合HD1</a></td>
+    <td> <SCRIPT LANGUAGE="JavaScript">
+function adClick(ad, site) {
+window.open(ad);
+window.location = site;}
+</script> 
+    <a href="javascript:adClick('http://www.baitv.com/ext/gztv/gztv1/', 'rtmp://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4');">廣州綜合HD2</a></td>
+  </tr>
+</table>
 </body>
 </html>
 
