--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -29,7 +29,7 @@ function adClick(ad, site) {
 window.open(ad);
 window.location = site;}
 </script> 
-    <a href="javascript:adClick('http://www.baitv.com/ext/gztv/gztv1/', 'rtmp://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4');">廣州綜合HD2</a></td>
+    <a href="javascript:adClick('rtmp://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4', 'http://www.baitv.com/ext/gztv/gztv1/');">廣州綜合HD2</a></td>
   </tr>
 </table>
 </body>
