--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -23,22 +23,29 @@ header-img: "img/fm/05.jpg"
     <td><a href="javascript:adClick('rtmp://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4', 'http://www.baitv.com/ext/gztv/gztv1/');">廣州綜合HD2</a></td>
   </tr>
   <tr>
-    <td height="104" colspan="2"> <SCRIPT LANGUAGE="JavaScript">
+    <td height="104" colspan="2"> <div align="center">
+      <SCRIPT LANGUAGE="JavaScript">
 function adClick(ad, site) {
 window.open(ad);
 window.location = site;}
-</script> <SCRIPT LANGUAGE="JavaScript">
+    </script> 
+      <SCRIPT LANGUAGE="JavaScript">
 function adClick(ad, site) {
 window.open(ad);
 window.location = site;}
-</script>
-  <input type="button" value="展开↓" onClick="m(this)">
-<div id="D" style="display:none;border:1px solid red;margin-top:10px;width:390px;line-height:180%;">
-<video id="video1" width="380" style="margin-top: 15xp;" controls>
-<source src="https://acfun.iqiyi-kuyun.com/ppvod/0A7B8005398F1992795559E2E8552DC7.m3u8" type="video/mp4" /><br>
-
-</div>
-<script>
+    </script>
+      <input type="button" value="展开↓" onClick="m(this)">
+    </div>
+      <div id="D" style="display:none;border:1px solid red;margin-top:10px;width:380px;line-height:180%;">
+  <video id="video1" width="380" style="margin-top: 15xp;" controls>
+  <div align="center">
+    <source src="https://acfun.iqiyi-kuyun.com/ppvod/0A7B8005398F1992795559E2E8552DC7.m3u8" type="video/mp4" />
+    <br>
+    
+  </div>
+      </div>
+      <div align="center">
+        <script>
 var F=false;
 function m(obj){
 if(F){
@@ -51,12 +58,12 @@ obj.value="收缩↑"
 F=true;
 }
 }
-</script></td>
+      </script>
+    </div></td>
   </tr>
 </table>
 </body>
 </html>
-
 
 
 
