--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -39,7 +39,7 @@ window.location = site;}
       <div id="D" style="display:none;border:1px solid red;margin-top:10px;width:360px;line-height:180%;">
   <video id="video1" width="360" style="margin-top: 15xp;" controls>
   <div align="center">
-    <source src="https://acfun.iqiyi-kuyun.com/ppvod/0A7B8005398F1992795559E2E8552DC7.m3u8" type="video/mp4" />
+    <source src="http://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4.m3u8" type="video/mp4" />
     <br>
     
   </div>
