--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -23,7 +23,7 @@ header-img: "img/fm/05.jpg"
     <td><a href="javascript:adClick('rtmp://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4', 'http://www.baitv.com/ext/gztv/gztv1/');">廣州綜合HD2</a></td>
   </tr>
   <tr>
-    <td height="104" colspan="2"> <div align="center">
+    <td height="104" colspan="2"><div align="center">
       <SCRIPT LANGUAGE="JavaScript">
 function adClick(ad, site) {
 window.open(ad);
@@ -33,16 +33,16 @@ window.location = site;}
 function adClick(ad, site) {
 window.open(ad);
 window.location = site;}
-    </script>
+      </script>
       <input type="button" value="展开↓" onClick="m(this)">
+      
     </div>
       <div id="D" style="display:none;border:1px solid red;margin-top:10px;width:360px;line-height:180%;">
-  <video id="video1" width="360" style="margin-top: 15xp;" controls>
-  <div align="center">
-    <source src="http://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4.m3u8" type="video/mp4" />
-    <br>
-    
-  </div>
+        <video id="video1" width="360" style="margin-top: 15xp;" controls>
+        <div align="center">
+          <td><source src="https://acfun.iqiyi-kuyun.com/ppvod/0E71204BA3BFA044103F7FE6FD25EC04.m3u8" type="video/mp4" /><td>
+          <br>
+        </div>
       </div>
       <div align="center">
         <script>
@@ -59,12 +59,11 @@ F=true;
 }
 }
       </script>
-    </div></td>
+      </div></td>
   </tr>
 </table>
 </body>
 </html>
-
 
 
 
