--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -38,9 +38,9 @@ window.location = site;}
       
     </div>
       <div id="D" style="display:none;border:1px solid red;margin-top:10px;width:360px;line-height:180%;">
-        <video id="video1" width="360" style="margin-top: 15xp;" controls>
-        <div align="center">
-          <td><source src="https://acfun.iqiyi-kuyun.com/ppvod/0E71204BA3BFA044103F7FE6FD25EC04.m3u8" type="video/mp4" /><td>
+<video autoplay>
+  <source src="https://acfun.iqiyi-kuyun.com/ppvod/0E71204BA3BFA044103F7FE6FD25EC04.m3u8" />
+</video><td>
           <br>
         </div>
       </div>
