--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -19,30 +19,7 @@ header-img: "img/fm/05.jpg"
 <body>
 <table width="400" border="0">
   <tr>
-    <td><div align="center">
-      <input type="button" value="CCTV5+HD" onClick="m(this)">
-    </div>
-      <div id="D" style="display:none;border:1px solid red;margin-top:10px;width:300px;line-height:180%;">
-  <iframe name="tv" width="300" height="300" src="http://www.baitv.com/ext/cctv/cctv5-plus/" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="auto" __idm_frm__="81"></iframe>
-  <div align="center"><br>
-  </div>
-      </div>
-      <div align="center">
-        <script>
-var F=false;
-function m(obj){
-if(F){
-document.getElementById('D').style.display="none";
-obj.value="CCTV5+HD";
-F=false;
-}else{
-document.getElementById('D').style.display="";
-obj.value="CCTV5+HD"
-F=true;
-}
-}
-      </script>
-    </div></td>
+    <td><div align="center"><a href="http://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/gztv.jpg" width="180" height="101" /></a><a href="http://play.gztv.com/live/23436_e2fd8e1e7e7111e892905cb9018cf0d4.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/gz_news.jpg" width="180" height="101" /></a></div></td>
   </tr>
 </table>
 </body>
