--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -14,12 +14,11 @@ header-img: "img/fm/05.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
 <p>
-</head>
-
 <body>
 <table width="400" border="0">
   <tr>
-    <td><div align="center"><a href="http://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/gztv.jpg" width="150" height="86" /></a><a href="http://play.gztv.com/live/23436_e2fd8e1e7e7111e892905cb9018cf0d4.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/gz_news.jpg" width="150" height="86" /></a></div></td>
+    <td><div align="center"><a href="http://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/gztv.jpg" alt="" width="180" height="101" /></a></div></td>
+    <td><div align="center"><a href="http://play.gztv.com/live/23436_e2fd8e1e7e7111e892905cb9018cf0d4.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/gz_news.jpg" alt="" width="180" height="101" /></a></div></td>
   </tr>
 </table>
 </body>
