--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -18,7 +18,7 @@ header-img: "img/fm/05.jpg"
 <body>
 <table width="400" border="0">
   <tr>
-    <td colspan="2"><a href="https://hbpoon.github.io/iptv/">&lt; IPTV</a></td>
+    <td colspan="2"><div align="right"><a href="https://hbpoon.github.io/iptv/"><strong>&lt; IPTV</strong></a></div></td>
   </tr>
   <tr>
     <td><div align="center"><a href="http://116.199.5.51:8114/00000000/2e368e04c76446bc9d30ca7a9f934dae/index.m3u8?Fsv_cid=1034&amp;Fsv_chan_hls_se_idx=188&amp;Fsv_ctype=LIVES&amp;version=9&amp;Fsv_rate_id=1&amp;Fsv_otype=1&amp;FvSeid=5abd1660af1babb4&amp;Pcontent_id=7f88be5fb6fd426494f6aa240f1dc7a9&amp;Provider_id=00000000&amp;Fsv_filetype=1&amp;Fsv_ShiftEnable=0&amp;Fsv_SV_PARAM1=0&amp;Fsv_ShiftTsp=240&amp;Fsv_CMSID=00000000&amp;AuthInfo=P2ZSH2gNMZ8aiVfV+jCYczoGsAYoDo4KY5I3eHfJhGTKdSzgLwCHoSet9it9fXrMLwehJxh9gmO/
@@ -66,7 +66,9 @@ OFrWyxI+tteLTJnZKT7Lg8BRYQNXMQU=
   </tr>
   <tr>
     <td><div align="center"><a href="http://116.199.5.51:8114/00000000/2e368e04c76446bc9d30ca7a9f934dae/index.m3u8?Fsv_cid=1034&amp;Fsv_chan_hls_se_idx=196&amp;Fsv_ctype=LIVES&amp;version=9&amp;Fsv_rate_id=1&amp;Fsv_otype=1&amp;FvSeid=5abd1660af1babb4&amp;Pcontent_id=7f88be5fb6fd426494f6aa240f1dc7a9&amp;Provider_id=00000000&amp;Fsv_filetype=1&amp;Fsv_ShiftEnable=0&amp;Fsv_SV_PARAM1=0&amp;Fsv_ShiftTsp=240&amp;Fsv_CMSID=00000000&amp;AuthInfo=P2ZSH2gNMZ8aiVfV%2BjCYczoGsAYoDo4KY5I3eHfJhGTKdSzgLwCHoSet9it9fXrMLwehJxh9gmO%2F%0AOFrWyxI%2BtteLTJnZKT7Lg8BRYQNXMQU%3D%0A"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/gd_public.jpg" alt="" width="180" height="101" /></a></div></td>
-    <td><div align="center"><a href="http://116.199.5.51:8114/00000000/2e368e04c76446bc9d30ca7a9f934dae/index.m3u8?Fsv_cid=1034&amp;Fsv_chan_hls_se_idx=01&amp;Fsv_ctype=LIVES&amp;version=9&amp;Fsv_rate_id=1&amp;Fsv_otype=1&amp;FvSeid=5abd1660af1babb4&amp;Pcontent_id=7f88be5fb6fd426494f6aa240f1dc7a9&amp;Provider_id=00000000&amp;Fsv_filetype=1&amp;Fsv_ShiftEnable=0&amp;Fsv_SV_PARAM1=0&amp;Fsv_ShiftTsp=240&amp;Fsv_CMSID=00000000&amp;AuthInfo=P2ZSH2gNMZ8aiVfV%2BjCYczoGsAYoDo4KY5I3eHfJhGTKdSzgLwCHoSet9it9fXrMLwehJxh9gmO%2F%0AOFrWyxI%2BtteLTJnZKT7Lg8BRYQNXMQU%3D%0A"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/gd_satellite.jpg" alt="" width="180" height="101" /></a></div></td>
+    <td><div align="center"><a href="http://116.199.5.51:8114/00000000/2e368e04c76446bc9d30ca7a9f934dae/index.m3u8?Fsv_cid=1034&amp;Fsv_chan_hls_se_idx=43&amp;Fsv_ctype=LIVES&amp;version=9&amp;Fsv_rate_id=1&amp;Fsv_otype=1&amp;FvSeid=5abd1660af1babb4&amp;Pcontent_id=7f88be5fb6fd426494f6aa240f1dc7a9&amp;Provider_id=00000000&amp;Fsv_filetype=1&amp;Fsv_ShiftEnable=0&amp;Fsv_SV_PARAM1=0&amp;Fsv_ShiftTsp=240&amp;Fsv_CMSID=00000000&amp;AuthInfo=P2ZSH2gNMZ8aiVfV+jCYczoGsAYoDo4KY5I3eHfJhGTKdSzgLwCHoSet9it9fXrMLwehJxh9gmO/
+OFrWyxI+tteLTJnZKT7Lg8BRYQNXMQU=
+"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/gd_satellite.jpg" alt="" width="180" height="101" /></a></div></td>
   </tr>
   <tr>
     <td><div align="center"><a href="http://epg.gdtv.cn/?c=4">廣東公共</a></div></td>
@@ -120,7 +122,9 @@ OFrWyxI+tteLTJnZKT7Lg8BRYQNXMQU=
   </tr>
   <tr>
     <td><div align="center"><a href="http://116.199.5.51:8114/00000000/2e368e04c76446bc9d30ca7a9f934dae/index.m3u8?Fsv_cid=1034&amp;Fsv_chan_hls_se_idx=07&amp;Fsv_ctype=LIVES&amp;version=9&amp;Fsv_rate_id=1&amp;Fsv_otype=1&amp;FvSeid=5abd1660af1babb4&amp;Pcontent_id=7f88be5fb6fd426494f6aa240f1dc7a9&amp;Provider_id=00000000&amp;Fsv_filetype=1&amp;Fsv_ShiftEnable=0&amp;Fsv_SV_PARAM1=0&amp;Fsv_ShiftTsp=240&amp;Fsv_CMSID=00000000&amp;AuthInfo=P2ZSH2gNMZ8aiVfV%2BjCYczoGsAYoDo4KY5I3eHfJhGTKdSzgLwCHoSet9it9fXrMLwehJxh9gmO%2F%0AOFrWyxI%2BtteLTJnZKT7Lg8BRYQNXMQU%3D%0A"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/gd_movie.jpg" alt="" width="180" height="101" /></a></div></td>
-    <td><div align="center"><a href="http://116.199.5.51:8114/00000000/2e368e04c76446bc9d30ca7a9f934dae/index.m3u8?Fsv_cid=1034&amp;Fsv_chan_hls_se_idx=202&amp;Fsv_ctype=LIVES&amp;version=9&amp;Fsv_rate_id=1&amp;Fsv_otype=1&amp;FvSeid=5abd1660af1babb4&amp;Pcontent_id=7f88be5fb6fd426494f6aa240f1dc7a9&amp;Provider_id=00000000&amp;Fsv_filetype=1&amp;Fsv_ShiftEnable=0&amp;Fsv_SV_PARAM1=0&amp;Fsv_ShiftTsp=240&amp;Fsv_CMSID=00000000&amp;AuthInfo=P2ZSH2gNMZ8aiVfV%2BjCYczoGsAYoDo4KY5I3eHfJhGTKdSzgLwCHoSet9it9fXrMLwehJxh9gmO%2F%0AOFrWyxI%2BtteLTJnZKT7Lg8BRYQNXMQU%3D%0A"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/gd_fsgg.jpg" alt="" width="180" height="101" /></a></div></td>
+    <td><div align="center"><a href="http://116.199.5.51:8114/00000000/2e368e04c76446bc9d30ca7a9f934dae/index.m3u8?Fsv_cid=1034&amp;Fsv_chan_hls_se_idx=182&amp;Fsv_ctype=LIVES&amp;version=9&amp;Fsv_rate_id=1&amp;Fsv_otype=1&amp;FvSeid=5abd1660af1babb4&amp;Pcontent_id=7f88be5fb6fd426494f6aa240f1dc7a9&amp;Provider_id=00000000&amp;Fsv_filetype=1&amp;Fsv_ShiftEnable=0&amp;Fsv_SV_PARAM1=0&amp;Fsv_ShiftTsp=240&amp;Fsv_CMSID=00000000&amp;AuthInfo=P2ZSH2gNMZ8aiVfV+jCYczoGsAYoDo4KY5I3eHfJhGTKdSzgLwCHoSet9it9fXrMLwehJxh9gmO/
+OFrWyxI+tteLTJnZKT7Lg8BRYQNXMQU=
+"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/gd_fsgg.jpg" alt="" width="180" height="101" /></a></div></td>
   </tr>
   <tr>
     <td><div align="center"><a href="http://www.969368.com/portal/channel_detail.jsp?channel_id=123">珠江電影</a></div></td>
